# yt_manager

./: .env  .gitignore  pyproject.toml  run_callback.bat  run_cli.py  run_ui.py
app/: settings.py
app/cli/: main.py
app/config/: ytdlp-config.txt
app/core/: app.py  clipmon.py  downloader.py  google.py  videos.py  ytdlp.py
app/db/: video.py
app/ui/: clipmon.py  main_window.py  video_queue.py
app/utils/: logger.py
docs/: 1-web-action-buttons.md  10-monitor_clipboard.md  2-add-videoid-or-url.md  3-mouse scroll not working.md  4-treesize-buttons.md  PRD_v1.md  video_queue.drawio  yt_manager_v1_requirements.md
